syntax = "proto3";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "GrpcServer";
service AirQuality {
	
	rpc getDataById(DataId) returns (AirDataQuality){}
	rpc createData(AirDataQuality) returns (AirDataQuality){}
	rpc deleteData(DataId) returns (google.protobuf.Empty){}
	rpc updateData(AirDataQuality) returns (AirDataQuality){}

	rpc MinDataValueInRange(DateRange) returns (AirDataQuality){}
	rpc MaxDataValueInRange(DateRange) returns (AirDataQuality){}
	rpc AverageDataValueInRange(DateRange) returns (AverageData){}
	rpc SumDataValueInRange(DateRange) returns(SumData){}
}

message DataId{
	int32 id = 1;
}
message AirDataQuality {
	  google.protobuf.Timestamp date = 1;
  google.protobuf.Duration time = 2;
  float co_gt = 3;
  int32 pt08_s1_co = 4;
  int32 nmhc_gt = 5;
  float c6h6_gt = 6;
  int32 pt08_s2_nmhc = 7;
  int32 nox_gt = 8;
  int32 pt08_s3_nox = 9;
  int32 no2_gt = 10;
  int32 pt08_s4_no2 = 11;
  int32 pt08_s5_o3 = 12;
  float t = 13;
  float rh = 14;
  float ah = 15;
  int32 id = 16;
}
message DateRange {
	string property_name = 1;
	google.protobuf.Timestamp startDate = 2;
	google.protobuf.Timestamp endDate = 3;
}
message AverageData {
	string property_name = 1;
	float averageValue = 2;
}
message SumData{
	string property_name = 1;
	float sumValue = 2;
}